US1314 - Additional fix for datepicker misalignment

--- a/app/scss/dashboard/_dashboard.scss
+++ b/app/scss/dashboard/_dashboard.scss
@@ -46,7 +46,7 @@ $chartIconsSpriteRetinaURL: url(../../assets/images/charts/sprite-buttons-chart-
 
         .fromTo
         {
-            padding: 0 15px 0 0;
+            padding: 5px 15px 0 0;
             // height: 25px;
             float: left;
             line-height:1;
@@ -101,6 +101,7 @@ $chartIconsSpriteRetinaURL: url(../../assets/images/charts/sprite-buttons-chart-
         float: left;
         font-size: $fontSizeSmall;
         color: $TPGrey3;
+        margin-top:5px;
     }
 
     input[type=text]
